// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KTable default has hover class when passed 1`] = `
<table class="k-table has-hover side-border">
  <thead>
    <tr>
      <th class="sortable"><span class="">
              Name
            </span></th>
      <th class=""><span class="">
              ID
            </span></th>
      <th class=""><span class="">
              Enabled
            </span></th>
      <th class=""><span class="sr-only">
              actions
            </span></th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>Basic Auth</td>
      <td>517526354743085</td>
      <td>true</td>
      <td></td>
    </tr>
    <tr>
      <td>Website Desktop</td>
      <td>328027447731198</td>
      <td>false</td>
      <td></td>
    </tr>
    <tr>
      <td>Android App</td>
      <td>405383051040955</td>
      <td>true</td>
      <td></td>
    </tr>
  </tbody>
</table>
`;

exports[`KTable default has small class when passed 1`] = `
<table class="k-table has-hover is-small side-border">
  <thead>
    <tr>
      <th class="sortable"><span class="">
              Name
            </span></th>
      <th class=""><span class="">
              ID
            </span></th>
      <th class=""><span class="">
              Enabled
            </span></th>
      <th class=""><span class="sr-only">
              actions
            </span></th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>Basic Auth</td>
      <td>517526354743085</td>
      <td>true</td>
      <td></td>
    </tr>
    <tr>
      <td>Website Desktop</td>
      <td>328027447731198</td>
      <td>false</td>
      <td></td>
    </tr>
    <tr>
      <td>Android App</td>
      <td>405383051040955</td>
      <td>true</td>
      <td></td>
    </tr>
  </tbody>
</table>
`;

exports[`KTable default renders link in action slot 1`] = `
<table class="k-table has-hover side-border">
  <thead>
    <tr>
      <th class="sortable"><span class="">
              Name
            </span></th>
      <th class=""><span class="">
              ID
            </span></th>
      <th class=""><span class="">
              Enabled
            </span></th>
      <th class=""><span class="sr-only">
              actions
            </span></th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>Basic Auth</td>
      <td>517526354743085</td>
      <td>true</td>
      <td><a href="#">Link</a></td>
    </tr>
    <tr>
      <td>Website Desktop</td>
      <td>328027447731198</td>
      <td>false</td>
      <td><a href="#">Link</a></td>
    </tr>
    <tr>
      <td>Android App</td>
      <td>405383051040955</td>
      <td>true</td>
      <td><a href="#">Link</a></td>
    </tr>
  </tbody>
</table>
`;

exports[`KTable sorting should have sortable class when passed 1`] = `
<table class="k-table has-hover side-border">
  <thead>
    <tr>
      <th class="sortable"><span class="">
              Name
            </span></th>
      <th class=""><span class="">
              ID
            </span></th>
      <th class=""><span class="">
              Enabled
            </span></th>
      <th class=""><span class="sr-only">
              actions
            </span></th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>Basic Auth</td>
      <td>517526354743085</td>
      <td>true</td>
      <td></td>
    </tr>
    <tr>
      <td>Website Desktop</td>
      <td>328027447731198</td>
      <td>false</td>
      <td></td>
    </tr>
    <tr>
      <td>Android App</td>
      <td>405383051040955</td>
      <td>true</td>
      <td></td>
    </tr>
  </tbody>
</table>
`;
